BAINOP/SAVE_LOGS/[tranngochoang0104][REPETITIONS].cpp.log
tranngochoang0104‣REPETITIONS: ℱ Dịch lỗi
REPETITIONS.cpp
"C:\Program Files (x86)\Themis\gcc\bin\g++.exe" -std=c++14 "REPETITIONS.cpp" -pipe -O2 -s -static -lm -x c++ -o"REPETITIONS.exe" -Wl,--stack,66060288|@WorkDir=C:\ProgramData\ThemisWorkSpace\WaitRoom51904\
REPETITIONS.cpp: In function 'int main()':
REPETITIONS.cpp:7:39: error: expected ';' before 'freopen'
  freopen ("repetitions.inp","r",stdin)
                                       ^
                                       ;
  freopen ("repetitions.out","w",stdout)
  ~~~~~~~                               
Dịch lỗi!

